<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true">

    <Button
        android:id="@+id/btn_go_back_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textColor="?attr/colorButtonNormal"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topProductCreateView"
        app:layout_constraintBottom_toTopOf="@+id/productCreateImagePreview"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true">

        <Button
            android:id="@+id/btn_create_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_create"
            android:textSize="@dimen/login_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/padding_8"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/product_image_url" />

        <EditText
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/product_create_input_width"
            android:hint="@string/product_name"
            android:layout_marginBottom="@dimen/padding_8"
            android:inputType="text"
            android:textSize="@dimen/login_edit_text"
            android:textColor="?attr/colorButtonNormal"
            android:textColorHint="?attr/colorButtonNormal"
            android:backgroundTint="?attr/colorButtonNormal"
            app:layout_constraintBottom_toTopOf="@+id/product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_price"
             />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/product_create_input_width"
            android:hint="@string/product_price"
            android:textSize="@dimen/login_edit_text"
            android:textColor="?attr/colorButtonNormal"
            android:textColorHint="?attr/colorButtonNormal"
            android:backgroundTint="?attr/colorButtonNormal"
            android:layout_marginBottom="@dimen/padding_8"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/product_image_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />

        <EditText
            android:id="@+id/product_image_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="@integer/product_create_input_width"
            android:hint="@string/product_image_url"
            android:textSize="@dimen/login_edit_text"
            android:textColor="?attr/colorButtonNormal"
            android:textColorHint="?attr/colorButtonNormal"
            android:backgroundTint="?attr/colorButtonNormal"
            android:layout_marginBottom="@dimen/padding_8"
            android:inputType="textUri"
            app:layout_constraintBottom_toTopOf="@+id/btn_create_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/productCreateImagePreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_form" />

    <View
        android:id="@+id/topProductCreateView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toTopOf="@id/product_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_back_main" />
</androidx.constraintlayout.widget.ConstraintLayout>